# reflexpr

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  demo.cpp  ruby-reflexpr.sln  ruby-reflexpr.vcxproj  ruby-reflexpr.vcxproj.filters  ruby_reflexpr.hpp
.github/workflows/: cmake-msvc-build.yml  cmake-multi-platform.yml
examples/: CMakeLists.txt  ruby_reflexpr-example.cpp
include/: CMakeLists.txt
include/fox/: reflexpr.hpp
include/ruby_reflexpr/: ruby_reflexpr.hpp
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt  reflexpr_test.cc  reflexpr_test_generator.py
